Atualização de documentos

--- a/ingresso-comprado.html
+++ b/ingresso-comprado.html
@@ -54,11 +54,11 @@
             <div class="card__qr-code--texto">
                 <img src="assets/img/ingresso/ingresso-comprado/qr-code.png" class="card__imagem--qr-code">
                 <div class="card__ingresso-comprado--textos">
-                    <h3 class="ingresso-comprado__titulo card-ingresso-comprado__titulo">Joyce Heinze</h3>
-                    <p class="card__ingresso-comprado--texto">Ingresso Costesia</p>
-                    <p class="card__ingresso-comprado--texto card__ingresso-comprado--texto-setor">Setor Pista</p>
-                    <p class="card__ingresso-comprado--texto">Data: 11/03</p>
-                    <p class="card__ingresso-comprado--texto">Local: São Paulo-SP</p>
+                    <h3 class="ingresso-comprado__titulo card-ingresso-comprado__titulo" id="nome"></h3>
+                    <p class="card__ingresso-comprado--texto" id="categoria-ingresso"></p>
+                    <p class="card__ingresso-comprado--texto card__ingresso-comprado--texto-setor" id="tipo-ingresso"></p>
+                    <p class="card__ingresso-comprado--texto" id="data-ingresso"></p>
+                    <p class="card__ingresso-comprado--texto" id="local-ingresso"></p>
 
                 </div>
             </div>
@@ -89,8 +89,8 @@
             <p class="rodape__texto rodape__texto--direita">Projeto fictício sem fins comerciais.</p>
         </div>
     </footer>
-    <script src="js/ingresso-comprado.js"></script>
     <script src="https://kit.fontawesome.com/36dfecbb43.js" crossorigin="anonymous"></script>
+    <script src="js/ingresso-comprado.js"></script>
 </body>
 
 </html>
