--- a/ingresso.html
+++ b/ingresso.html
@@ -61,7 +61,7 @@
                         de Ingresso:</legend>
                     <select required
                         class="formulario__area-resposta formulario__area-resposta--selecao formulario__descricao--dupla"
-                        name="selecao-ingresso">
+                        id="selecao-ingresso">
                         <option value="">Tipo de Ingresso</option>
                         <option value="Pista Premium">Pista Premium</option>
                         <option value="Pista Comum">Pista Comum</option>
@@ -106,8 +106,8 @@
             <p class="rodape__texto rodape__texto--direita">Projeto fictício sem fins comerciais.</p>
         </div>
     </footer>
-    <script src="js/ingresso.js"></script>
     <script src="https://kit.fontawesome.com/36dfecbb43.js" crossorigin="anonymous"></script>
+    <script src="js/ingresso.js"></script>
 </body>
 
 </html>
